fixed tutorial on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -141,10 +141,9 @@
   position: absolute;
   height: 100%;
   width: 100%;
-  z-index: 9999;
+  z-index: 9998;
   display: none;
 }
-
 
 #tutorial-mobile {
   font-weight: lighter !important;
@@ -152,4 +151,13 @@
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
+}
+
+@media only screen and (max-width: 500px) {
+  .navbar-wagon-dropdown-menu {
+    margin-top: 15px;
+    box-shadow: 1px 1px 4px #E6E6E6;
+    border-color: #E6E6E6;
+    z-index: 9999;
+  }
 }
